// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Large icons 1`] = `
<div
  className="sc-bwzfXH kTzfEn"
/>
`;

exports[`Storyshots Icon Medium icons 1`] = `
<div
  className="sc-bwzfXH kTzfEn"
/>
`;

exports[`Storyshots Icon Small icons 1`] = `
<div
  className="sc-bwzfXH dgMdOc"
/>
`;
